# deeplearning-assignments

./: README.md
lab1/: Cargo.toml  README.md  lab1.ipynb
lab1/src/: main.rs
lab2/: .gitignore  Cargo.toml  notes.md
lab2/src/: config.rs  data.rs  inception_resnet_v2.rs  main.rs  metrics.rs  simple.rs
lab3/: Cargo.toml
lab3/src/: main.rs  model.rs
