[package]
name = "lab2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = { version = "0.13.0", features = ["download-libtorch"] }
prometheus = "0.13.3"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = "1.0.164"
toml = "0.7.4"
rand = "0.8.5"